parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    INT

Grammar

Rule 0     S' -> input
Rule 1     input -> <empty>
Rule 2     input -> command input
Rule 3     command -> COMMENT
Rule 4     SYMBOL -> XYZ
Rule 5     SYMBOL -> ID
Rule 6     TEXT -> SYMBOL
Rule 7     TEXT -> STRING
Rule 8     NUMBER -> DOUBLE
Rule 9     command -> POP
Rule 10    command -> PUSH
Rule 11    command -> SCREEN NUMBER NUMBER
Rule 12    command -> SCREEN
Rule 13    command -> SAVE TEXT TEXT
Rule 14    command -> DISPLAY
Rule 15    command -> CYLINDER NUMBER NUMBER NUMBER NUMBER NUMBER
Rule 16    command -> CYLINDER SYMBOL NUMBER NUMBER NUMBER NUMBER NUMBER
Rule 17    command -> CYLINDER NUMBER NUMBER NUMBER NUMBER NUMBER SYMBOL
Rule 18    command -> CYLINDER SYMBOL NUMBER NUMBER NUMBER NUMBER NUMBER SYMBOL
Rule 19    command -> CONE NUMBER NUMBER NUMBER NUMBER NUMBER
Rule 20    command -> CONE SYMBOL NUMBER NUMBER NUMBER NUMBER NUMBER
Rule 21    command -> CONE NUMBER NUMBER NUMBER NUMBER NUMBER SYMBOL
Rule 22    command -> CONE SYMBOL NUMBER NUMBER NUMBER NUMBER NUMBER SYMBOL
Rule 23    command -> SPHERE NUMBER NUMBER NUMBER NUMBER
Rule 24    command -> SPHERE SYMBOL NUMBER NUMBER NUMBER NUMBER
Rule 25    command -> SPHERE NUMBER NUMBER NUMBER NUMBER SYMBOL
Rule 26    command -> SPHERE SYMBOL NUMBER NUMBER NUMBER NUMBER SYMBOL
Rule 27    command -> OBLICONE NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER
Rule 28    command -> OBLICONE NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER SYMBOL
Rule 29    command -> OBLICONE SYMBOL NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER
Rule 30    command -> OBLICONE SYMBOL NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER SYMBOL
Rule 31    command -> TORUS NUMBER NUMBER NUMBER NUMBER NUMBER
Rule 32    command -> TORUS NUMBER NUMBER NUMBER NUMBER NUMBER SYMBOL
Rule 33    command -> TORUS SYMBOL NUMBER NUMBER NUMBER NUMBER NUMBER
Rule 34    command -> TORUS SYMBOL NUMBER NUMBER NUMBER NUMBER NUMBER SYMBOL
Rule 35    command -> BOX NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER
Rule 36    command -> BOX NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER SYMBOL
Rule 37    command -> BOX SYMBOL NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER
Rule 38    command -> BOX SYMBOL NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER SYMBOL
Rule 39    command -> LINE NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER
Rule 40    command -> LINE NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER SYMBOL
Rule 41    command -> LINE NUMBER NUMBER NUMBER SYMBOL NUMBER NUMBER NUMBER
Rule 42    command -> LINE NUMBER NUMBER NUMBER SYMBOL NUMBER NUMBER NUMBER SYMBOL
Rule 43    command -> LINE SYMBOL NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER
Rule 44    command -> LINE SYMBOL NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER SYMBOL
Rule 45    command -> LINE SYMBOL NUMBER NUMBER NUMBER SYMBOL NUMBER NUMBER NUMBER
Rule 46    command -> LINE SYMBOL NUMBER NUMBER NUMBER SYMBOL NUMBER NUMBER NUMBER SYMBOL
Rule 47    command -> MOVE NUMBER NUMBER NUMBER SYMBOL
Rule 48    command -> MOVE NUMBER NUMBER NUMBER
Rule 49    command -> SCALE NUMBER NUMBER NUMBER SYMBOL
Rule 50    command -> SCALE NUMBER NUMBER NUMBER
Rule 51    command -> ROTATE XYZ NUMBER SYMBOL
Rule 52    command -> ROTATE XYZ NUMBER
Rule 53    command -> FRAMES NUMBER
Rule 54    command -> BASENAME TEXT
Rule 55    command -> VARY SYMBOL NUMBER NUMBER NUMBER NUMBER
Rule 56    command -> SET SYMBOL NUMBER
Rule 57    command -> SET_KNOBS NUMBER
Rule 58    command -> AMBIENT NUMBER NUMBER NUMBER
Rule 59    command -> CONSTANTS SYMBOL NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER
Rule 60    command -> CONSTANTS SYMBOL NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER
Rule 61    command -> LIGHT SYMBOL NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER
Rule 62    command -> SHADING SHADING_TYPE
Rule 63    command -> CAMERA NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER
Rule 64    command -> GENERATE_RAYFILES
Rule 65    command -> MESH CO TEXT
Rule 66    command -> MESH SYMBOL CO TEXT
Rule 67    command -> MESH CO TEXT SYMBOL
Rule 68    command -> MESH SYMBOL CO TEXT SYMBOL
Rule 69    command -> SAVE_KNOBS SYMBOL
Rule 70    command -> SAVE_COORDS SYMBOL
Rule 71    command -> TWEEN NUMBER NUMBER SYMBOL SYMBOL
Rule 72    command -> FOCAL NUMBER
Rule 73    command -> WEB
Rule 74    command -> TEXTURE SYMBOL NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER

Terminals, with rules where they appear

AMBIENT              : 58
BASENAME             : 54
BOX                  : 35 36 37 38
CAMERA               : 63
CO                   : 65 66 67 68
COMMENT              : 3
CONE                 : 19 20 21 22
CONSTANTS            : 59 60
CYLINDER             : 15 16 17 18
DISPLAY              : 14
DOUBLE               : 8
FOCAL                : 72
FRAMES               : 53
GENERATE_RAYFILES    : 64
ID                   : 5
INT                  : 
LIGHT                : 61
LINE                 : 39 40 41 42 43 44 45 46
MESH                 : 65 66 67 68
MOVE                 : 47 48
OBLICONE             : 27 28 29 30
POP                  : 9
PUSH                 : 10
ROTATE               : 51 52
SAVE                 : 13
SAVE_COORDS          : 70
SAVE_KNOBS           : 69
SCALE                : 49 50
SCREEN               : 11 12
SET                  : 56
SET_KNOBS            : 57
SHADING              : 62
SHADING_TYPE         : 62
SPHERE               : 23 24 25 26
STRING               : 7
TEXTURE              : 74
TORUS                : 31 32 33 34
TWEEN                : 71
VARY                 : 55
WEB                  : 73
XYZ                  : 4 51 52
error                : 

Nonterminals, with rules where they appear

NUMBER               : 11 11 15 15 15 15 15 16 16 16 16 16 17 17 17 17 17 18 18 18 18 18 19 19 19 19 19 20 20 20 20 20 21 21 21 21 21 22 22 22 22 22 23 23 23 23 24 24 24 24 25 25 25 25 26 26 26 26 27 27 27 27 27 27 27 28 28 28 28 28 28 28 29 29 29 29 29 29 29 30 30 30 30 30 30 30 31 31 31 31 31 32 32 32 32 32 33 33 33 33 33 34 34 34 34 34 35 35 35 35 35 35 36 36 36 36 36 36 37 37 37 37 37 37 38 38 38 38 38 38 39 39 39 39 39 39 40 40 40 40 40 40 41 41 41 41 41 41 42 42 42 42 42 42 43 43 43 43 43 43 44 44 44 44 44 44 45 45 45 45 45 45 46 46 46 46 46 46 47 47 47 48 48 48 49 49 49 50 50 50 51 52 53 55 55 55 55 56 57 58 58 58 59 59 59 59 59 59 59 59 59 60 60 60 60 60 60 60 60 60 60 60 60 61 61 61 61 61 61 63 63 63 63 63 63 71 71 72 74 74 74 74 74 74 74 74 74 74 74 74
SYMBOL               : 6 16 17 18 18 20 21 22 22 24 25 26 26 28 29 30 30 32 33 34 34 36 37 38 38 40 41 42 42 43 44 44 45 45 46 46 46 47 49 51 55 56 59 60 61 66 67 68 68 69 70 71 71 74
TEXT                 : 13 13 54 65 66 67 68
command              : 2
input                : 2 0

Parsing method: LALR

state 0

    (0) S' -> . input
    (1) input -> .
    (2) input -> . command input
    (3) command -> . COMMENT
    (9) command -> . POP
    (10) command -> . PUSH
    (11) command -> . SCREEN NUMBER NUMBER
    (12) command -> . SCREEN
    (13) command -> . SAVE TEXT TEXT
    (14) command -> . DISPLAY
    (15) command -> . CYLINDER NUMBER NUMBER NUMBER NUMBER NUMBER
    (16) command -> . CYLINDER SYMBOL NUMBER NUMBER NUMBER NUMBER NUMBER
    (17) command -> . CYLINDER NUMBER NUMBER NUMBER NUMBER NUMBER SYMBOL
    (18) command -> . CYLINDER SYMBOL NUMBER NUMBER NUMBER NUMBER NUMBER SYMBOL
    (19) command -> . CONE NUMBER NUMBER NUMBER NUMBER NUMBER
    (20) command -> . CONE SYMBOL NUMBER NUMBER NUMBER NUMBER NUMBER
    (21) command -> . CONE NUMBER NUMBER NUMBER NUMBER NUMBER SYMBOL
    (22) command -> . CONE SYMBOL NUMBER NUMBER NUMBER NUMBER NUMBER SYMBOL
    (23) command -> . SPHERE NUMBER NUMBER NUMBER NUMBER
    (24) command -> . SPHERE SYMBOL NUMBER NUMBER NUMBER NUMBER
    (25) command -> . SPHERE NUMBER NUMBER NUMBER NUMBER SYMBOL
    (26) command -> . SPHERE SYMBOL NUMBER NUMBER NUMBER NUMBER SYMBOL
    (27) command -> . OBLICONE NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER
    (28) command -> . OBLICONE NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER SYMBOL
    (29) command -> . OBLICONE SYMBOL NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER
    (30) command -> . OBLICONE SYMBOL NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER SYMBOL
    (31) command -> . TORUS NUMBER NUMBER NUMBER NUMBER NUMBER
    (32) command -> . TORUS NUMBER NUMBER NUMBER NUMBER NUMBER SYMBOL
    (33) command -> . TORUS SYMBOL NUMBER NUMBER NUMBER NUMBER NUMBER
    (34) command -> . TORUS SYMBOL NUMBER NUMBER NUMBER NUMBER NUMBER SYMBOL
    (35) command -> . BOX NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER
    (36) command -> . BOX NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER SYMBOL
    (37) command -> . BOX SYMBOL NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER
    (38) command -> . BOX SYMBOL NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER SYMBOL
    (39) command -> . LINE NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER
    (40) command -> . LINE NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER SYMBOL
    (41) command -> . LINE NUMBER NUMBER NUMBER SYMBOL NUMBER NUMBER NUMBER
    (42) command -> . LINE NUMBER NUMBER NUMBER SYMBOL NUMBER NUMBER NUMBER SYMBOL
    (43) command -> . LINE SYMBOL NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER
    (44) command -> . LINE SYMBOL NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER SYMBOL
    (45) command -> . LINE SYMBOL NUMBER NUMBER NUMBER SYMBOL NUMBER NUMBER NUMBER
    (46) command -> . LINE SYMBOL NUMBER NUMBER NUMBER SYMBOL NUMBER NUMBER NUMBER SYMBOL
    (47) command -> . MOVE NUMBER NUMBER NUMBER SYMBOL
    (48) command -> . MOVE NUMBER NUMBER NUMBER
    (49) command -> . SCALE NUMBER NUMBER NUMBER SYMBOL
    (50) command -> . SCALE NUMBER NUMBER NUMBER
    (51) command -> . ROTATE XYZ NUMBER SYMBOL
    (52) command -> . ROTATE XYZ NUMBER
    (53) command -> . FRAMES NUMBER
    (54) command -> . BASENAME TEXT
    (55) command -> . VARY SYMBOL NUMBER NUMBER NUMBER NUMBER
    (56) command -> . SET SYMBOL NUMBER
    (57) command -> . SET_KNOBS NUMBER
    (58) command -> . AMBIENT NUMBER NUMBER NUMBER
    (59) command -> . CONSTANTS SYMBOL NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER
    (60) command -> . CONSTANTS SYMBOL NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER
    (61) command -> . LIGHT SYMBOL NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER
    (62) command -> . SHADING SHADING_TYPE
    (63) command -> . CAMERA NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER
    (64) command -> . GENERATE_RAYFILES
    (65) command -> . MESH CO TEXT
    (66) command -> . MESH SYMBOL CO TEXT
    (67) command -> . MESH CO TEXT SYMBOL
    (68) command -> . MESH SYMBOL CO TEXT SYMBOL
    (69) command -> . SAVE_KNOBS SYMBOL
    (70) command -> . SAVE_COORDS SYMBOL
    (71) command -> . TWEEN NUMBER NUMBER SYMBOL SYMBOL
    (72) command -> . FOCAL NUMBER
    (73) command -> . WEB
    (74) command -> . TEXTURE SYMBOL NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER

    $end            reduce using rule 1 (input -> .)
    COMMENT         shift and go to state 3
    POP             shift and go to state 4
    PUSH            shift and go to state 5
    SCREEN          shift and go to state 6
    SAVE            shift and go to state 7
    DISPLAY         shift and go to state 8
    CYLINDER        shift and go to state 9
    CONE            shift and go to state 10
    SPHERE          shift and go to state 11
    OBLICONE        shift and go to state 12
    TORUS           shift and go to state 13
    BOX             shift and go to state 14
    LINE            shift and go to state 15
    MOVE            shift and go to state 16
    SCALE           shift and go to state 17
    ROTATE          shift and go to state 18
    FRAMES          shift and go to state 19
    BASENAME        shift and go to state 20
    VARY            shift and go to state 21
    SET             shift and go to state 22
    SET_KNOBS       shift and go to state 23
    AMBIENT         shift and go to state 24
    CONSTANTS       shift and go to state 25
    LIGHT           shift and go to state 26
    SHADING         shift and go to state 27
    CAMERA          shift and go to state 28
    GENERATE_RAYFILES shift and go to state 29
    MESH            shift and go to state 30
    SAVE_KNOBS      shift and go to state 31
    SAVE_COORDS     shift and go to state 32
    TWEEN           shift and go to state 33
    FOCAL           shift and go to state 34
    WEB             shift and go to state 35
    TEXTURE         shift and go to state 36

    input                          shift and go to state 1
    command                        shift and go to state 2

state 1

    (0) S' -> input .



state 2

    (2) input -> command . input
    (1) input -> .
    (2) input -> . command input
    (3) command -> . COMMENT
    (9) command -> . POP
    (10) command -> . PUSH
    (11) command -> . SCREEN NUMBER NUMBER
    (12) command -> . SCREEN
    (13) command -> . SAVE TEXT TEXT
    (14) command -> . DISPLAY
    (15) command -> . CYLINDER NUMBER NUMBER NUMBER NUMBER NUMBER
    (16) command -> . CYLINDER SYMBOL NUMBER NUMBER NUMBER NUMBER NUMBER
    (17) command -> . CYLINDER NUMBER NUMBER NUMBER NUMBER NUMBER SYMBOL
    (18) command -> . CYLINDER SYMBOL NUMBER NUMBER NUMBER NUMBER NUMBER SYMBOL
    (19) command -> . CONE NUMBER NUMBER NUMBER NUMBER NUMBER
    (20) command -> . CONE SYMBOL NUMBER NUMBER NUMBER NUMBER NUMBER
    (21) command -> . CONE NUMBER NUMBER NUMBER NUMBER NUMBER SYMBOL
    (22) command -> . CONE SYMBOL NUMBER NUMBER NUMBER NUMBER NUMBER SYMBOL
    (23) command -> . SPHERE NUMBER NUMBER NUMBER NUMBER
    (24) command -> . SPHERE SYMBOL NUMBER NUMBER NUMBER NUMBER
    (25) command -> . SPHERE NUMBER NUMBER NUMBER NUMBER SYMBOL
    (26) command -> . SPHERE SYMBOL NUMBER NUMBER NUMBER NUMBER SYMBOL
    (27) command -> . OBLICONE NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER
    (28) command -> . OBLICONE NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER SYMBOL
    (29) command -> . OBLICONE SYMBOL NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER
    (30) command -> . OBLICONE SYMBOL NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER SYMBOL
    (31) command -> . TORUS NUMBER NUMBER NUMBER NUMBER NUMBER
    (32) command -> . TORUS NUMBER NUMBER NUMBER NUMBER NUMBER SYMBOL
    (33) command -> . TORUS SYMBOL NUMBER NUMBER NUMBER NUMBER NUMBER
    (34) command -> . TORUS SYMBOL NUMBER NUMBER NUMBER NUMBER NUMBER SYMBOL
    (35) command -> . BOX NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER
    (36) command -> . BOX NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER SYMBOL
    (37) command -> . BOX SYMBOL NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER
    (38) command -> . BOX SYMBOL NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER SYMBOL
    (39) command -> . LINE NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER
    (40) command -> . LINE NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER SYMBOL
    (41) command -> . LINE NUMBER NUMBER NUMBER SYMBOL NUMBER NUMBER NUMBER
    (42) command -> . LINE NUMBER NUMBER NUMBER SYMBOL NUMBER NUMBER NUMBER SYMBOL
    (43) command -> . LINE SYMBOL NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER
    (44) command -> . LINE SYMBOL NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER SYMBOL
    (45) command -> . LINE SYMBOL NUMBER NUMBER NUMBER SYMBOL NUMBER NUMBER NUMBER
    (46) command -> . LINE SYMBOL NUMBER NUMBER NUMBER SYMBOL NUMBER NUMBER NUMBER SYMBOL
    (47) command -> . MOVE NUMBER NUMBER NUMBER SYMBOL
    (48) command -> . MOVE NUMBER NUMBER NUMBER
    (49) command -> . SCALE NUMBER NUMBER NUMBER SYMBOL
    (50) command -> . SCALE NUMBER NUMBER NUMBER
    (51) command -> . ROTATE XYZ NUMBER SYMBOL
    (52) command -> . ROTATE XYZ NUMBER
    (53) command -> . FRAMES NUMBER
    (54) command -> . BASENAME TEXT
    (55) command -> . VARY SYMBOL NUMBER NUMBER NUMBER NUMBER
    (56) command -> . SET SYMBOL NUMBER
    (57) command -> . SET_KNOBS NUMBER
    (58) command -> . AMBIENT NUMBER NUMBER NUMBER
    (59) command -> . CONSTANTS SYMBOL NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER
    (60) command -> . CONSTANTS SYMBOL NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER
    (61) command -> . LIGHT SYMBOL NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER
    (62) command -> . SHADING SHADING_TYPE
    (63) command -> . CAMERA NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER
    (64) command -> . GENERATE_RAYFILES
    (65) command -> . MESH CO TEXT
    (66) command -> . MESH SYMBOL CO TEXT
    (67) command -> . MESH CO TEXT SYMBOL
    (68) command -> . MESH SYMBOL CO TEXT SYMBOL
    (69) command -> . SAVE_KNOBS SYMBOL
    (70) command -> . SAVE_COORDS SYMBOL
    (71) command -> . TWEEN NUMBER NUMBER SYMBOL SYMBOL
    (72) command -> . FOCAL NUMBER
    (73) command -> . WEB
    (74) command -> . TEXTURE SYMBOL NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER

    $end            reduce using rule 1 (input -> .)
    COMMENT         shift and go to state 3
    POP             shift and go to state 4
    PUSH            shift and go to state 5
    SCREEN          shift and go to state 6
    SAVE            shift and go to state 7
    DISPLAY         shift and go to state 8
    CYLINDER        shift and go to state 9
    CONE            shift and go to state 10
    SPHERE          shift and go to state 11
    OBLICONE        shift and go to state 12
    TORUS           shift and go to state 13
    BOX             shift and go to state 14
    LINE            shift and go to state 15
    MOVE            shift and go to state 16
    SCALE           shift and go to state 17
    ROTATE          shift and go to state 18
    FRAMES          shift and go to state 19
    BASENAME        shift and go to state 20
    VARY            shift and go to state 21
    SET             shift and go to state 22
    SET_KNOBS       shift and go to state 23
    AMBIENT         shift and go to state 24
    CONSTANTS       shift and go to state 25
    LIGHT           shift and go to state 26
    SHADING         shift and go to state 27
    CAMERA          shift and go to state 28
    GENERATE_RAYFILES shift and go to state 29
    MESH            shift and go to state 30
    SAVE_KNOBS      shift and go to state 31
    SAVE_COORDS     shift and go to state 32
    TWEEN           shift and go to state 33
    FOCAL           shift and go to state 34
    WEB             shift and go to state 35
    TEXTURE         shift and go to state 36

    command                        shift and go to state 2
    input                          shift and go to state 37

state 3

    (3) command -> COMMENT .

    COMMENT         reduce using rule 3 (command -> COMMENT .)
    POP             reduce using rule 3 (command -> COMMENT .)
    PUSH            reduce using rule 3 (command -> COMMENT .)
    SCREEN          reduce using rule 3 (command -> COMMENT .)
    SAVE            reduce using rule 3 (command -> COMMENT .)
    DISPLAY         reduce using rule 3 (command -> COMMENT .)
    CYLINDER        reduce using rule 3 (command -> COMMENT .)
    CONE            reduce using rule 3 (command -> COMMENT .)
    SPHERE          reduce using rule 3 (command -> COMMENT .)
    OBLICONE        reduce using rule 3 (command -> COMMENT .)
    TORUS           reduce using rule 3 (command -> COMMENT .)
    BOX             reduce using rule 3 (command -> COMMENT .)
    LINE            reduce using rule 3 (command -> COMMENT .)
    MOVE            reduce using rule 3 (command -> COMMENT .)
    SCALE           reduce using rule 3 (command -> COMMENT .)
    ROTATE          reduce using rule 3 (command -> COMMENT .)
    FRAMES          reduce using rule 3 (command -> COMMENT .)
    BASENAME        reduce using rule 3 (command -> COMMENT .)
    VARY            reduce using rule 3 (command -> COMMENT .)
    SET             reduce using rule 3 (command -> COMMENT .)
    SET_KNOBS       reduce using rule 3 (command -> COMMENT .)
    AMBIENT         reduce using rule 3 (command -> COMMENT .)
    CONSTANTS       reduce using rule 3 (command -> COMMENT .)
    LIGHT           reduce using rule 3 (command -> COMMENT .)
    SHADING         reduce using rule 3 (command -> COMMENT .)
    CAMERA          reduce using rule 3 (command -> COMMENT .)
    GENERATE_RAYFILES reduce using rule 3 (command -> COMMENT .)
    MESH            reduce using rule 3 (command -> COMMENT .)
    SAVE_KNOBS      reduce using rule 3 (command -> COMMENT .)
    SAVE_COORDS     reduce using rule 3 (command -> COMMENT .)
    TWEEN           reduce using rule 3 (command -> COMMENT .)
    FOCAL           reduce using rule 3 (command -> COMMENT .)
    WEB             reduce using rule 3 (command -> COMMENT .)
    TEXTURE         reduce using rule 3 (command -> COMMENT .)
    $end            reduce using rule 3 (command -> COMMENT .)


state 4

    (9) command -> POP .

    COMMENT         reduce using rule 9 (command -> POP .)
    POP             reduce using rule 9 (command -> POP .)
    PUSH            reduce using rule 9 (command -> POP .)
    SCREEN          reduce using rule 9 (command -> POP .)
    SAVE            reduce using rule 9 (command -> POP .)
    DISPLAY         reduce using rule 9 (command -> POP .)
    CYLINDER        reduce using rule 9 (command -> POP .)
    CONE            reduce using rule 9 (command -> POP .)
    SPHERE          reduce using rule 9 (command -> POP .)
    OBLICONE        reduce using rule 9 (command -> POP .)
    TORUS           reduce using rule 9 (command -> POP .)
    BOX             reduce using rule 9 (command -> POP .)
    LINE            reduce using rule 9 (command -> POP .)
    MOVE            reduce using rule 9 (command -> POP .)
    SCALE           reduce using rule 9 (command -> POP .)
    ROTATE          reduce using rule 9 (command -> POP .)
    FRAMES          reduce using rule 9 (command -> POP .)
    BASENAME        reduce using rule 9 (command -> POP .)
    VARY            reduce using rule 9 (command -> POP .)
    SET             reduce using rule 9 (command -> POP .)
    SET_KNOBS       reduce using rule 9 (command -> POP .)
    AMBIENT         reduce using rule 9 (command -> POP .)
    CONSTANTS       reduce using rule 9 (command -> POP .)
    LIGHT           reduce using rule 9 (command -> POP .)
    SHADING         reduce using rule 9 (command -> POP .)
    CAMERA          reduce using rule 9 (command -> POP .)
    GENERATE_RAYFILES reduce using rule 9 (command -> POP .)
    MESH            reduce using rule 9 (command -> POP .)
    SAVE_KNOBS      reduce using rule 9 (command -> POP .)
    SAVE_COORDS     reduce using rule 9 (command -> POP .)
    TWEEN           reduce using rule 9 (command -> POP .)
    FOCAL           reduce using rule 9 (command -> POP .)
    WEB             reduce using rule 9 (command -> POP .)
    TEXTURE         reduce using rule 9 (command -> POP .)
    $end            reduce using rule 9 (command -> POP .)


state 5

    (10) command -> PUSH .

    COMMENT         reduce using rule 10 (command -> PUSH .)
    POP             reduce using rule 10 (command -> PUSH .)
    PUSH            reduce using rule 10 (command -> PUSH .)
    SCREEN          reduce using rule 10 (command -> PUSH .)
    SAVE            reduce using rule 10 (command -> PUSH .)
    DISPLAY         reduce using rule 10 (command -> PUSH .)
    CYLINDER        reduce using rule 10 (command -> PUSH .)
    CONE            reduce using rule 10 (command -> PUSH .)
    SPHERE          reduce using rule 10 (command -> PUSH .)
    OBLICONE        reduce using rule 10 (command -> PUSH .)
    TORUS           reduce using rule 10 (command -> PUSH .)
    BOX             reduce using rule 10 (command -> PUSH .)
    LINE            reduce using rule 10 (command -> PUSH .)
    MOVE            reduce using rule 10 (command -> PUSH .)
    SCALE           reduce using rule 10 (command -> PUSH .)
    ROTATE          reduce using rule 10 (command -> PUSH .)
    FRAMES          reduce using rule 10 (command -> PUSH .)
    BASENAME        reduce using rule 10 (command -> PUSH .)
    VARY            reduce using rule 10 (command -> PUSH .)
    SET             reduce using rule 10 (command -> PUSH .)
    SET_KNOBS       reduce using rule 10 (command -> PUSH .)
    AMBIENT         reduce using rule 10 (command -> PUSH .)
    CONSTANTS       reduce using rule 10 (command -> PUSH .)
    LIGHT           reduce using rule 10 (command -> PUSH .)
    SHADING         reduce using rule 10 (command -> PUSH .)
    CAMERA          reduce using rule 10 (command -> PUSH .)
    GENERATE_RAYFILES reduce using rule 10 (command -> PUSH .)
    MESH            reduce using rule 10 (command -> PUSH .)
    SAVE_KNOBS      reduce using rule 10 (command -> PUSH .)
    SAVE_COORDS     reduce using rule 10 (command -> PUSH .)
    TWEEN           reduce using rule 10 (command -> PUSH .)
    FOCAL           reduce using rule 10 (command -> PUSH .)
    WEB             reduce using rule 10 (command -> PUSH .)
    TEXTURE         reduce using rule 10 (command -> PUSH .)
    $end            reduce using rule 10 (command -> PUSH .)


state 6

    (11) command -> SCREEN . NUMBER NUMBER
    (12) command -> SCREEN .
    (8) NUMBER -> . DOUBLE

    COMMENT         reduce using rule 12 (command -> SCREEN .)
    POP             reduce using rule 12 (command -> SCREEN .)
    PUSH            reduce using rule 12 (command -> SCREEN .)
    SCREEN          reduce using rule 12 (command -> SCREEN .)
    SAVE            reduce using rule 12 (command -> SCREEN .)
    DISPLAY         reduce using rule 12 (command -> SCREEN .)
    CYLINDER        reduce using rule 12 (command -> SCREEN .)
    CONE            reduce using rule 12 (command -> SCREEN .)
    SPHERE          reduce using rule 12 (command -> SCREEN .)
    OBLICONE        reduce using rule 12 (command -> SCREEN .)
    TORUS           reduce using rule 12 (command -> SCREEN .)
    BOX             reduce using rule 12 (command -> SCREEN .)
    LINE            reduce using rule 12 (command -> SCREEN .)
    MOVE            reduce using rule 12 (command -> SCREEN .)
    SCALE           reduce using rule 12 (command -> SCREEN .)
    ROTATE          reduce using rule 12 (command -> SCREEN .)
    FRAMES          reduce using rule 12 (command -> SCREEN .)
    BASENAME        reduce using rule 12 (command -> SCREEN .)
    VARY            reduce using rule 12 (command -> SCREEN .)
    SET             reduce using rule 12 (command -> SCREEN .)
    SET_KNOBS       reduce using rule 12 (command -> SCREEN .)
    AMBIENT         reduce using rule 12 (command -> SCREEN .)
    CONSTANTS       reduce using rule 12 (command -> SCREEN .)
    LIGHT           reduce using rule 12 (command -> SCREEN .)
    SHADING         reduce using rule 12 (command -> SCREEN .)
    CAMERA          reduce using rule 12 (command -> SCREEN .)
    GENERATE_RAYFILES reduce using rule 12 (command -> SCREEN .)
    MESH            reduce using rule 12 (command -> SCREEN .)
    SAVE_KNOBS      reduce using rule 12 (command -> SCREEN .)
    SAVE_COORDS     reduce using rule 12 (command -> SCREEN .)
    TWEEN           reduce using rule 12 (command -> SCREEN .)
    FOCAL           reduce using rule 12 (command -> SCREEN .)
    WEB             reduce using rule 12 (command -> SCREEN .)
    TEXTURE         reduce using rule 12 (command -> SCREEN .)
    $end            reduce using rule 12 (command -> SCREEN .)
    DOUBLE          shift and go to state 39

    NUMBER                         shift and go to state 38

state 7

    (13) command -> SAVE . TEXT TEXT
    (6) TEXT -> . SYMBOL
    (7) TEXT -> . STRING
    (4) SYMBOL -> . XYZ
    (5) SYMBOL -> . ID

    STRING          shift and go to state 42
    XYZ             shift and go to state 43
    ID              shift and go to state 44

    TEXT                           shift and go to state 40
    SYMBOL                         shift and go to state 41

state 8

    (14) command -> DISPLAY .
